margin management start, UI updates

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -74,16 +74,20 @@
     "modeBuy": "Buy",
     "modeSell": "Sell",
     "modeMix": "Mix",
+    "modeOrigin": "Origin",
     "title": "Exchange Rate Dynamics",
     "subtitle": "Daily data · hover for details",
     "loading": "Loading...",
     "latestBuy": "Buy",
     "latestSell": "Sell",
+    "latestOrigin": "Origin (ECB)",
     "errorLoadCurrencies": "Failed to load currency list (server unavailable)",
     "rangeAll": "All",
     "seriesBuy": "Buy",
     "seriesSell": "Sell",
     "seriesSpread": "Spread",
+    "seriesOrigin": "ECB Origin",
+    "originAuthRequired": "Origin mode is available only for logged-in users",
     "rate": "Rate"
   },
   "currencyTable": {
