--- a/client/src/locales/lv/translation.json
+++ b/client/src/locales/lv/translation.json
@@ -74,16 +74,20 @@
     "modeBuy": "Pirkšana",
     "modeSell": "Pārdošana",
     "modeMix": "Abi",
-    "title": "Valūtu kursu dinamika",
+    "modeOrigin": "Oriģināls",
+    "title": "Valūtu kursu diagramma",
     "subtitle": "Dienas dati · pārvietojiet kursoru detalizācijai",
     "loading": "Ielādē...",
     "latestBuy": "Pirkšana",
     "latestSell": "Pārdošana",
+    "latestOrigin": "Oriģināls (ECB)",
     "errorLoadCurrencies": "Neizdevās ielādēt valūtu sarakstu (serveris nav pieejams)",
     "rangeAll": "Viss",
     "seriesBuy": "Pirkšana",
     "seriesSell": "Pārdošana",
     "seriesSpread": "Starpcena",
+    "seriesOrigin": "ECB oriģināls",
+    "originAuthRequired": "Oriģināla režīms pieejams tikai pieteikušamies lietotājiem",
     "rate": "Kurss"
   },
   "currencyTable": {
