--- a/client/src/locales/lv/translation.json
+++ b/client/src/locales/lv/translation.json
@@ -2,6 +2,8 @@
   "header": {
     "brand": "Exchange Explorer",
     "currencyManagement": "Valūtu pārvaldība",
+    "marginManagement": "Maržu pārvaldība",
+    "adminManagement": "Admin pārvaldība",
     "login": "Pieteikties",
     "profile": "Profils",
     "logout": "Iziet",
@@ -9,6 +11,7 @@
     "userMenu": "Lietotāja izvēlne",
     "switchTo": "Pārslēgt valodu uz {{lng}}"
   },
+  
   "login": {
     "title": "Pieteikšanās",
     "emailLabel": "E-pasts",
@@ -46,7 +49,14 @@
     "passwordRequired": "Nepieciešama parole",
     "passwordMismatch": "Paroles nesakrīt",
     "passwordChangeFailed": "Paroles maiņa neizdevās",
-    "passwordUpdated": "Parole atjaunināta"
+    "passwordUpdated": "Parole atjaunināta",
+    "firstNameRequired": "Vārds ir obligāts",
+    "lastNameRequired": "Uzvārds ir obligāts",
+    "emailRequired": "E-pasts ir obligāts",
+    "passwordConfirmRequired": "Lūdzu apstipriniet paroli",
+    "passwordTooShort": "Parolei jābūt vismaz 6 rakstzīmju garai",
+    "passwordRequiresDigitSymbol": "Parolē jābūt vismaz vienam ciparam vai speciālam simbolam",
+    "userFallback": "Lietotājs"
   },
   "currencyManagement": {
     "title": "Valūtu pārvaldība",
@@ -150,7 +160,14 @@
     "next": "Nākamā",
     "last": "Pēdējā",
     "page": "Lapa {{page}} no {{total}}",
-    "createNew": "Izveidot jaunu +"
+    "createNew": "Izveidot jaunu +",
+    "save": "Saglabāt",
+    "cancel": "Atcelt",
+    "saving": "Saglabājas...",
+    "edit": "Rediģēt",
+    "create": "Izveidot",
+    "creating": "Tiek veidots...",
+    "back": "Atpakaļ"
   },
   "marginChart": {
     "title": "Maržas vēsture",
@@ -187,10 +204,123 @@
     "errorCode": "Valūtas kodam jābūt tieši 3 burtiem",
     "errorRequest": "Pieprasījums neizdevās",
     "errorCreateFailed": "Neizdevās izveidot ({{status}})",
-    "success": "Valūta \"{{code}}\" veiksmīgi izveidota."
+    "success": "Valūta \"{{code}}\" veiksmīgi izveidota.",
+    "namePlaceholder": "Valūtas nosaukums (pēc izvēles)"
+  },
+
+  "createUser": {
+    "title": "Izveidot jaunu lietotāju",
+    "firstNameLabel": "Vārds",
+    "firstNamePlaceholder": "Ievadiet vārdu",
+    "lastNameLabel": "Uzvārds",
+    "lastNamePlaceholder": "Ievadiet uzvārdu",
+    "emailLabel": "E-pasts",
+    "emailPlaceholder": "Ievadiet e-pastu",
+    "roleLabel": "Loma",
+    "roleUser": "Lietotājs",
+    "roleAdmin": "Admin",
+    "passwordLabel": "Parole",
+    "passwordPlaceholder": "Ievadiet paroli",
+    "create": "Izveidot",
+    "creating": "Veidojas...",
+    "cancel": "Atcelt",
+    "firstNameRequired": "Vārds ir obligāts",
+    "lastNameRequired": "Uzvārds ir obligāts",
+    "emailRequired": "E-pasts ir obligāts",
+    "invalidEmail": "Lūdzu ievadiet derīgu e-pastu",
+    "passwordRequired": "Parole ir obligāta",
+    "passwordLength": "Parolei jābūt vismaz 6 simbolu garai",
+    "passwordRequirements": "Parolē jābūt vismaz vienam ciparam vai speciālam simbolam"
+  },
+
+  "forgot": {
+    "recoverViaEmail": "Atgūt paroli pa e-pastu",
+    "titleEmail": "Atgūt paroli pa e-pastu",
+    "sending": "Sūta...",
+    "sendCode": "Sūtīt kodu",
+    "codeSent": "Kods nosūtīts (pārbaudiet arī surogātpastu)",
+    "accountDeleted": "Konts ir dzēsts",
+    "serverError": "Servera kļūda",
+    "networkError": "Tīkla kļūda, mēģiniet vēlreiz",
+    "verifying": "Pārbauda...",
+    "invalidOrExpiredCode": "Nederīgs vai beidzies derīguma termiņš",
+    "codeVerified": "Kods pārbaudīts.",
+    "enterCodeTitle": "Ievadiet 6 ciparu kodu",
+    "sentTo": "Nosūtīts uz {{email}}",
+    "setNewPassword": "Iestatīt jaunu paroli",
+    "newPasswordLabel": "Jauna parole",
+    "enterNewPassword": "Ievadiet jaunu paroli",
+    "repeatPasswordLabel": "Atkārtot paroli",
+    "repeatNewPassword": "Atkārtot jauno paroli",
+    "saving": "Saglabājas...",
+    "saveNewPassword": "Saglabāt jauno paroli",
+    "enterAndRepeat": "Ievadiet un atkārtojiet jauno paroli.",
+    "passwordTooShort": "Parolei jābūt vismaz 6 simbolu garai.",
+    "passwordRequiresDigitSymbol": "Parolē jābūt vismaz vienam ciparam vai speciālam simbolam",
+    "passwordsDoNotMatch": "Paroles nesakrīt.",
+    "updateFailed": "Neizdevās atjaunināt paroli",
+    "passwordChangedSuccess": "Parole veiksmīgi nomainīta! Notiek pāradresēšana..."
+  },
+  "admin": {
+    "accessRestricted": "Piekļuve ierobežota administratoriem.",
+    "userTable": "Lietotāju tabula"
   },
   "currenciesList": {
     "title": "Valūtu tabulas ID saraksts"
+  },
+  "ExportTable": {
+    "formatNameCsv": "CSV",
+    "formatNameExcel": "Excel",
+    "formatNamePdf": "PDF (Priekšskatījums)",
+    "filenameLabel": "Faila nosaukums:",
+    "downloadButtonPdf": "Ģenerēt un skatīt PDF",
+    "downloadButtonDefault": "Lejupielādēt failu",
+    "helpCsv": "CSV: vērtības atdalītas ar komatiem.",
+    "helpXlsx": "Excel: .xlsx fails.",
+    "helpPdf": "PDF: atver iebūvēto skatītāju zemāk.",
+    "pdfPreviewTitle": "PDF priekšskatījums",
+    "close": "Aizvērt",
+    "overlayAria": "Eksports notiek",
+    "tableNotFound": "Tabula nav atrasta vai ir tukša."
+  },
+  "UserTable": {
+    "title": "Lietotāji",
+    "createNew": "Izveidot jaunu +",
+    "loading": "Notiek lietotāju ielāde...",
+    "headerFirstName": "Vārds",
+    "headerLastName": "Uzvārds",
+    "headerEmail": "E-pasts",
+    "headerRole": "Loma",
+    "headerCreatedAt": "Izveots",
+    "headerLastLogin": "Pēdējā pieslēgšanās",
+    "headerStatus": "Statuss",
+    "actions": "Darbības",
+    "roleOptionUser": "Lietotājs",
+    "roleOptionAdmin": "Admins",
+    "statusActive": "Aktīvs",
+    "statusDeactivated": "Deaktivizēts",
+    "activate": "Aktivizēt",
+    "deactivate": "Deaktivizēt",
+    "changeRole": "Mainīt lomu",
+    "noData": "Lietotāji netika atrasti",
+    "modalDeactivateTitle": "Deaktivizēt lietotāju?",
+    "modalActivateTitle": "Aktivizēt lietotāju?",
+    "modalConfirmAction": "Vai tiešām vēlaties {{action}} {{user}}?",
+    "modalNo": "Nē",
+    "modalYes": "Jā",
+    "working": "Notiek...",
+    "changeRoleTitle": "Mainīt lomu?",
+    "changeRoleFor": "Mainīt lomu lietotājam {{user}}. Vai tiešām?",
+    "changeRoleLabel": "Izvēlieties jaunu lomu",
+    "paginationShowing": "Rāda {{from}} - {{to}} no {{total}}",
+    "paginationFirst": "« Pirmā",
+    "paginationPrev": "‹ Iepriekšējā",
+    "paginationPage": "Lapa {{page}} / {{total}}",
+    "paginationNext": "Nākamā ›",
+    "paginationLast": "Pēdējā »",
+    "errorLoadUsers": "Neizdevās ielādēt lietotājus",
+    "errorUpdateUser": "Neizdevās atjaunināt lietotāju",
+    "errorChangeRole": "Neizdevās mainīt lomu"
   },
   "routes": {
     "loading": "Ielādē..."
