--- a/client/src/locales/lv/translation.json
+++ b/client/src/locales/lv/translation.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "brand": "Exchange Explorer",
+    "brand": "Rate Explorer",
     "currencyManagement": "Valūtu pārvaldība",
     "marginManagement": "Maržu pārvaldība",
     "adminManagement": "Admin pārvaldība",
@@ -53,6 +53,7 @@
     "firstNameRequired": "Vārds ir obligāts",
     "lastNameRequired": "Uzvārds ir obligāts",
     "emailRequired": "E-pasts ir obligāts",
+    "invalidEmail": "Lūdzu ievadiet derīgu e-pastu",
     "passwordConfirmRequired": "Lūdzu apstipriniet paroli",
     "passwordTooShort": "Parolei jābūt vismaz 6 rakstzīmju garai",
     "passwordRequiresDigitSymbol": "Parolē jābūt vismaz vienam ciparam vai speciālam simbolam",
@@ -77,7 +78,8 @@
     "result": "Pārdodot {{fromVal}} {{fromCode}} jūs saņemsiet {{toVal}} {{toCode}}",
     "rateApplied": "Pielietotais kurss: 1 {{fromCode}} = {{rate}} {{toCode}}",
     "ratesTaken": "Kursi ņemti no: {{date}}",
-    "paySandbox": "Maksāt (sandbox)",
+    "payStripe": "Apmainīt",
+    "payMinHelp": "Jābūt vismaz {{min}} {{code}}",
     "payRedirecting": "Novirza...",
     "payInitFailed": "Neizdevās sākt maksājumu",
     "payConfirm": "Turpināt ar Stripe sandbox maksājumu?\n\nMaksāt {{fromVal}} {{fromCode}}, lai saņemtu {{toVal}} {{toCode}}"
@@ -89,7 +91,7 @@
     "modeSell": "Pārdošana",
     "modeMix": "Abi",
     "modeOrigin": "Oriģināls",
-    "title": "Valūtu kursu diagramma",
+    "title": "Kursu dinamika",
     "subtitle": "Dienas dati · pārvietojiet kursoru detalizācijai",
     "loading": "Ielādē...",
     "latestBuy": "Pirkšana",
@@ -118,7 +120,7 @@
     "sellRate": "Pārdošanas kurss",
     "buyRate": "Pirkšanas kurss",
     "date": "Datums",
-    "noData": "Nav datu.",
+    "noData": "Nav datu",
     "showing": "Rāda {{from}} - {{to}} no {{total}}",
     "first": "Pirmā", 
     "prev": "Iepriekšējā",
@@ -159,7 +161,7 @@
     "prev": "Iepriekšējā",
     "next": "Nākamā",
     "last": "Pēdējā",
-    "page": "Lapa {{page}} no {{total}}",
+    "page": "Lapa {{page}} / {{total}}",
     "createNew": "Izveidot jaunu +",
     "save": "Saglabāt",
     "cancel": "Atcelt",
@@ -312,12 +314,12 @@
     "changeRoleTitle": "Mainīt lomu?",
     "changeRoleFor": "Mainīt lomu lietotājam {{user}}. Vai tiešām?",
     "changeRoleLabel": "Izvēlieties jaunu lomu",
-    "paginationShowing": "Rāda {{from}} - {{to}} no {{total}}",
-    "paginationFirst": "« Pirmā",
-    "paginationPrev": "‹ Iepriekšējā",
-    "paginationPage": "Lapa {{page}} / {{total}}",
-    "paginationNext": "Nākamā ›",
-    "paginationLast": "Pēdējā »",
+    "showing": "Rāda {{from}} - {{to}} no {{total}}",
+    "first": "Pirmā",
+    "prev": "Iepriekšējā",
+    "page": "Lapa {{page}} / {{total}}",
+    "next": "Nākamā",
+    "last": "Pēdējā",
     "errorLoadUsers": "Neizdevās ielādēt lietotājus",
     "errorUpdateUser": "Neizdevās atjaunināt lietotāju",
     "errorChangeRole": "Neizdevās mainīt lomu"
